# matrixmultiply_mt

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: bench1.rs
src/: archparam.rs  debugmacros.rs  dgemm_kernel.rs  gemm.rs  generic_kernel.rs  generic_params.rs  hwl_kernels.rs  kernel.rs  lib.rs  loops.rs  pointer.rs  sgemm_kernel.rs  snb_kernels.rs  tuneable_sgemm.rs  unroll.rs  util.rs
tests/: sgemm.rs  sgemm_st.rs
