[package]
name = "matrixmultiply_mt"
version = "0.2.0"
authors = ["bluss", "J. Millard"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/millardjn/matrixmultiply_mt"
documentation = "https://bluss.github.io/matrixmultiply/"

description = "Multithreaded Fork of bluss's matrixmultiply crate. General matrix multiplication of f32 and f64 matrices in Rust. Supports matrices with general strides. Uses a microkernel strategy, so that the implementation is easy to parallelize and optimize. `RUSTFLAGS=\"-C target-cpu=native\"` is your friend here."

keywords = ["matrix", "sgemm", "dgemm"]

[profile.release]
opt-level = 3

[lib]
bench = false

[dependencies]
rawpointer = "0.2"
num_cpus = "1.10"
threadpool = "1.7"
lazy_static = "1.4"
typenum = "1.11"
typenum_loops = "0.3"
generic-array = "0.14"
num-traits = "0.2"
parking_lot = "0.11"
smallvec = "1.6"